content/docs/core/1.2.0/reference/vendr-core-models/price.md
---
title: Price
description: API reference for Price in Vendr, the eCommerce solution for Umbraco v8+
---
## Price

A Vendr price object

```csharp
public sealed class Price : ValueObjectBase, IPrice
```

**Inheritance**

* class [ValueObjectBase](../valueobjectbase/)
* interface [IPrice](../iprice/)

**Namespace**
* [Vendr.Core.Models](../)

### Constructors

#### Price (1 of 2)

Instantiates a new [`Price`](../price/) instance

```csharp
public Price(decimal valueWithoutTax, decimal tax, Guid currencyId)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| valueWithoutTax | The value of the price without tax |
| tax | The tax value of the price |
| currencyId | The ID of the [`Currency`](../currency/) of the price |

---

#### Price (2 of 2)

Instantiates a new [`Price`](../price/) instance

```csharp
public Price(decimal valueWithoutTax, decimal tax, decimal valueWithTax, Guid currencyId)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| valueWithoutTax | The value of the price without tax |
| tax | The tax value of the price |
| valueWithTax | The value of the price with tax |
| currencyId | The ID of the [`Currency`](../currency/) of the price |


### Properties

#### CurrencyId

Gets the ID of the [`Currency`](../currency/) of the price

```csharp
public Guid CurrencyId { get; }
```


---

#### Tax

Gets the tax value of the price

```csharp
public decimal Tax { get; }
```


---

#### WithoutTax

Gets the value of the price without tax

```csharp
public decimal WithoutTax { get; }
```


---

#### WithTax

Gets the value of the price with tax

```csharp
public decimal WithTax { get; }
```


### Methods

#### Calculate

Calculates a price from the given [`TaxRate`](../taxrate/)

```csharp
public static Price Calculate(decimal value, TaxRate taxRate, Guid currencyId, 
    bool valueIncludesTax = false)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| value | The value of the price |
| taxRate | The [`TaxRate`](../taxrate/) of the price |
| currencyId | The ID of the [`Currency`](../currency/) of the price |
| valueIncludesTax | A boolean flag indicating whether the supplied price already includes tax |

**Returns**

A new [`Price`](../price/) instance


---

#### OfSameCurrency (1 of 2)

Create a new [`Price`](../price/) of the same [`Currency`](../currency/) as an existing price

```csharp
public static Price OfSameCurrency(Price existingPrice, decimal valueWithoutTax, decimal tax)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| existingPrice | The existing [`Price`](../price/) instance |
| valueWithoutTax | The value of the new price without tax |
| tax | The tax value of the new price |

**Returns**

A new [`Price`](../price/) instance

---

#### OfSameCurrency (2 of 2)

Create a new [`Price`](../price/) of the same [`Currency`](../currency/) as an existing price

```csharp
public static Price OfSameCurrency(Price existingPrice, decimal valueWithoutTax, decimal tax, 
    decimal valueWithTax)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| existingPrice | The existing [`Price`](../price/) instance |
| valueWithoutTax | The value of the new price without tax |
| tax | The tax value of the new price |
| valueWithTax | The value of the new price with tax |

**Returns**

A new [`Price`](../price/) instance


---

#### ZeroValue

Instantiates a new [`Price`](../price/) instance with a zero value

```csharp
public static Price ZeroValue(Guid currencyId)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| currencyId | The ID of the [`Currency`](../currency/) of the price |

**Returns**

A zero value [`Price`](../price/) instance


---

#### DeepClone

```csharp
public override object DeepClone()
```


### Operators

#### Price Implicit

```csharp
public static implicit operator decimal(Price price)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
